--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,13 +281,13 @@ input[type=submit] {
   width: 75%;
 }
 
-@media only screen and (max-width: 640px){  
+@media screen and (max-width: 640px){  
  .auth-image,
  #main-container,
   .sidebar,
   .main-section,
   .work {
-/*    float: none;*/
+    float: none;
     max-width: 100%;
     width: 100%;
     font-size: 18px;
@@ -297,15 +297,65 @@ input[type=submit] {
       font-size: 25px;
     }
     #logo{
-      float: left;
       width: 100%;
       height: 75px;
       line-height: 75px;
-      font-size: 30px;
+      font-size: 25px;
     }
     nav{
+      width: 100%;
       float: none;
       display: inline-block;
-      margin: auto;
+      text-align: center;
+      margin: 0;
+    }
+    nav a{
+      width: 32%;
+      margin: 0;
+      padding; 0;
+    }
+    #main-container {
+    padding-left: 20px;
+    padding-right: 20px;
+    }
+    .auth-image{
+      margin-bottom: 10px;
     }
   }
+
+@media screen and (max-width: 768px){
+   #main-container,
+  .sidebar,
+  .main-section {
+/*    float: none;*/
+      max-width: 100%;
+      width: 100%;
+      font-size: 18px;
+      line-height: 25px;
+    }
+  #main-container {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  nav {
+      padding-right: 20px;
+    }
+  div .container{
+    padding-left: 20px;
+  }
+/*  .work{
+    margin-left: 20px;
+  }*/
+}
+
+/*@media screen and (max-width: 980px){
+    section.main-section,
+    .sidebar{
+    width: 55%;
+    margin-left: 20px;
+    }
+   .main-section{
+      max-width: 100%
+    }
+  }
+  */
